<resources>
    <string name="app_name">PetApp</string>

    <!-- Global button labels -->
    <string name="back_button">Back</string>
    <string name="submit_button">Submit</string>
    <string name="next_button">Next</string>

    <!-- Profile Creation Views -->
    <string name="profile_creation_title">Create Profile</string>
    <string name="pet_sitter">Pet Sitter</string>
    <string name="pet_owner">Pet Owner</string>


    <!-- temp for testing -->
    <string name="view_listings">View Listings</string>

    <!-- Login -->
    <string name="username_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_submit_label">Login</string>
    <string name="forgot_password_label">Forgot password?</string>

    <!-- Forgot ID -->
    <string name="old_pass">Please Enter Old Password</string>
    <string name="new_pass">Please Enter New Password</string>\
    <string name="new2_pass">Please Re-Enter New Password</string>

    <!-- Pet Owner/Pet Profile Registration Form -->
    <string name="pet_name_form_label">Pet Name</string>
    <string name="pet_type_label">Pet Type</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="pet_type_hint">Enter the species or breed of pet</string>
    <string name="pet_registration_title">Create Pet Profile</string>
    <string name="sitter_registration_title">Create Sitter Profile</string>
    <string name="camera_label">Camera</string>
    <string name="gallery_label">Gallery</string>
    <string name="welcome">Welcome to PetPanion</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>

    <!-- Sitter Profile Registration Form -->
    <string name="sitter_first_name_label_string">Sitter First Name</string>
    <string name="sitter_last_name_label_string">Sitter Last Name</string>
    <string name="sitter_phone_number_string">Phone Number</string>
    <string name="email_label">Email Address</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Sitter Preferences Registration -->
    <string name="sitter_prefs_title">Sitter Preferences</string>
    <string name="zip_code_label">Starting Zip Code:</string>
    <string name="distance_slider_label">Max Job Distance:</string>
    <string name="travel_switch_label">Travel to jobs?</string>
    <string name="desired_pets_label">Desired Pets:</string>
    <string name="pet_weight_seekbar_label">Weight range:</string>

    <!-- Job Listings -->
    <string name="edit_search_filter_btn">Edit Filters</string>

    <!-- Job Details -->
    <string name="weight_units">lbs</string>
    <string name="miles">miles</string>
    <string name="apply_to_listing">Apply!</string>
    <string name="pet_size">Size:</string>
    <string name="pet_breed">Breed:</string>
    <string name="owner_address_label">Owner\'s Address</string>
    <string name="owner_contact_label">Owner\'s Contact Information</string>
    <string name="weight">Weight:</string>

</resources>