<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/sitter_registration_title"
                android:textColor="@color/DarkBlue.co"
                android:textSize="24sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/registration_firstname_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sitter_first_name_label_string"
                android:textColor="@color/DarkBlue.co" />

            <EditText
                android:id="@+id/sitter_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/registration_lastname_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sitter_last_name_label_string"
                android:textColor="@color/DarkBlue.co" />

            <EditText
                android:id="@+id/sitter_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/registration_email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textColor="@color/DarkBlue.co" />

            <EditText
                android:id="@+id/sitter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none|textEmailAddress" />

            <TextView
                android:id="@+id/registration_phone_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sitter_phone_number_string"
                android:textColor="@color/DarkBlue.co" />

            <EditText
                android:id="@+id/sitter_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none|phone" />

            <TextView
                android:id="@+id/registration_street_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street_address"
                android:textColor="@color/DarkBlue.co" />

            <EditText
                android:id="@+id/sitter_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none|textPostalAddress" />

            <TextView
                android:id="@+id/registration_city_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/DarkBlue.co" />

            <EditText
                android:id="@+id/sitter_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none|textPostalAddress" />

            <TextView
                android:id="@+id/registration_state_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textColor="@color/DarkBlue.co" />

            <EditText
                android:id="@+id/sitter_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none|textPostalAddress" />

            <TextView
                android:id="@+id/registration_zipcode_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zipcode"
                android:textColor="@color/DarkBlue.co" />

            <EditText
                android:id="@+id/sitter_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none|textPostalAddress" />

            <TextView
                android:id="@+id/sitter_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="@color/DarkBlue.co" />

            <EditText
                android:id="@+id/sitter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/sitter_confirm_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/DarkBlue.co" />

            <EditText
                android:id="@+id/sitter_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/next_sitter_registration_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Red.co"
                android:text="@string/submit_button"
                android:textColor="@color/Cream.co" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>