<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id = "@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/old_password"
        android:text = "The new passwords do not match try again"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red"
        android:textSize="22dp"
        android:gravity = "center"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/new_password1"
        android:text = "@string/old_pass"
        android:ems="10"

        />

    <EditText
        android:id="@+id/new_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text = "@string/new_pass"
        android:ems="10"

         />

    <EditText
        android:id="@+id/new_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text = "@string/new2_pass"
        android:layout_below = "@id/new_password1"
        android:layout_centerHorizontal="true"
        android:ems="10"

        />
    <Button
        android:id = "@+id/submit_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/new_password2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text = "@string/submit_button"
        />

</RelativeLayout>