<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetProfRegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/pet_creation_form_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@android:color/transparent"
        android:shadowDy="0"
        android:singleLine="false"
        android:text="@string/back_button"
        android:textColor="@color/colorTitle"
        app:layout_constraintBottom_toBottomOf="@+id/pet_registration_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pet_registration_title" />

    <TextView
        android:id="@+id/pet_registration_title"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/pet_registration_title"
        android:textColor="@color/colorTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pet_name_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/pet_name_form_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <AutoCompleteTextView
        android:id="@+id/pet_type_autocomplete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:hint="@string/pet_type_hint"
        android:text="@string/pet_type_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_name_registration" />

    <EditText
        android:id="@+id/pet_registration_demeanor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_type_autocomplete" />

    <EditText
        android:id="@+id/pet_registration_routine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_registration_demeanor" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginLeft="162dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:layout_marginBottom="50dp"
            android:text="@string/submit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pet_pic_camera_btn" />

    <Button
        android:id="@+id/pet_pic_camera_btn"
        style="@style/secondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginTop="50dp"
        android:text="@string/camera_label"
        app:layout_constraintEnd_toStartOf="@+id/pet_pic_gallery_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_registration_routine" />

    <Button
        android:id="@+id/pet_pic_gallery_btn"
        style="@style/secondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="117dp"
        android:layout_marginRight="117dp"
        android:text="@string/gallery_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pet_pic_camera_btn"
        app:layout_constraintTop_toBottomOf="@+id/pet_registration_routine" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginLeft="141dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_registration_title"
        tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>