<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetProfRegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_create_title"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/profile_creation_title"
        android:textColor="@color/colorTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_profile_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@android:color/transparent"
        android:password="false"
        android:phoneNumber="false"
        android:shadowDy="0"
        android:singleLine="false"
        android:text="@string/back_button"
        android:textColor="@color/colorTitle"
        app:layout_constraintBottom_toBottomOf="@+id/profile_create_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_create_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/pet_sitter_profile_select"
        android:layout_width="360dp"
        android:layout_height="201dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/pet_sitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_create_title" />

    <Button
        android:id="@+id/pet_owner_profile_select"
        android:layout_width="360dp"
        android:layout_height="201dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/pet_owner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_sitter_profile_select" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>